ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eks-sample-ingress
  namespace: eks-sample-app
  labels:
    app: eks-sample-linux-app
  annotations:
    # nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eks-sample-linux-service
                port:
                  number: 80
